# mariachi-lang

./: .gitignore  README.md  TODO.md  for_loop.py  grammar.mar  pyproject.toml  setup.cfg  shelved.py  test.mar  test.py  wtf.py
examples/: cantar.mar  eco.mar  funciones.mar  if.mar  para.mar  while.mar
grammar/: grammar.txt
mariachi/: __main__.py  context.py  errors.py  file_runner.py  interpreter.py  lexer.py  mariachi.py  nodes.py  numbers.py  parser.py  repl.py  results.py  token.py  types.py  values.py
mariachi/core/: scanner.py
mariachi/utils/: tokens.py
tests/: conftest.py  test_core.py  test_if_else.py  test_scanner.py
