[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mariachi"
version = "0.1.0"
description = "Mariachi Lang, a Spanish-inspired toy programming language"
authors = [
  { name = "Javier Arambula" }
]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
include-package-data = true